<!--
  Copyright (c) 2012 Moarub Oy.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Moarub Oy - initial API and implementation
-->
<resources>

    <string name="app_name">ShareMore</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sahare_moar">Save to Kippt</string>
    <string name="title_activity_sahare_moar_quick">Quick Save to Kippt</string>
    <string name="url">URL</string>
    <string name="notes">Notes</string>
    <string name="share_to_kippt">Share to Kippt</string>
    <string name="title">Title</string>
    <string name="saving">Saving</string>
    <string name="clip_created">Saved to Kippt</string>
    <string name="inet_not_available">No Internet Connection</string>
    <string name="readlater">Read Later</string>
    <string name="password_not_stored">Password is not stored</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="star">Star this</string>
    <string name="list">List</string>
    <string name="menu_add_notes">Add Notes</string>
    <string name="menu_send">Kippt it!</string>
    <string name="error_creation">"Error "</string>
    <string name="authentication_failed_password_changed">Authentication failed, password changed?</string>
    <string name="no_url_found_in_the_shared_text">No URL found in the shared text</string>
    <string name="star_item">Star</string>
    <string name="ua_string_for_kippt">ShareMore for Android,sharemore@moarub.com,http://moarub.com/sharemore</string>

</resources>
