<!--
  Copyright (c) 2012 Moarub Oy.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Moarub Oy - initial API and implementation
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_star"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_action_star_10"
        android:showAsAction="ifRoom"
        android:title="Star"
        android:titleCondensed="Star">
    </item>
    <item
        android:id="@+id/menu_read_later"
        android:checkable="true"
        android:icon="@drawable/ic_action_glasses_gray"
        android:showAsAction="ifRoom"
        android:title="Read Later"
        android:titleCondensed="Read Later">
    </item>
     <item
        android:id="@+id/menu_add_note"
        android:showAsAction="never"
        android:title="@string/menu_add_notes"/>
      <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_action_send"
        android:showAsAction="always"
        android:title="@string/menu_send"/>
     

</menu>